--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Spotify Mix CD Maker",
   "version": "0.1.0",
   "description": "Generate nostalgic mix CDs from your Spotify songs.",
-  "permissions": ["storage", "identity", "activeTab", "scripting"],
+  "permissions": ["tabs", "storage", "identity", "activeTab", "scripting"],
   "host_permissions": [
     "https://api.spotify.com/*",
     "https://accounts.spotify.com/*",
@@ -25,4 +25,5 @@
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   }
+
 }
